# rocksalt

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.claude/: frontend-modernization-plan.md
frontend/: Cargo.toml
frontend/.cargo/: config.toml
frontend/src/: disk_entry.rs  event.rs  file.rs  lib.rs  main.rs  message.rs  model.rs  view.rs
frontend/src/event/: mod.rs  set_file.rs  set_project_path.rs
shared/: Cargo.toml
shared/src/: disk_entry.rs  file_type.rs  lib.rs  message.rs  utils.rs
shared/src/event/: mod.rs  set_file.rs  set_project_path.rs
shared/src/file_system/: disk_entry.rs  file_type.rs  mod.rs  path.rs
shared/src/file_system/file/: cobalt_markdown.rs  mod.rs  plain_text.rs
shared/static/test/: basic.md
src/: event_handler.rs  file.rs  inline_code.rs  main.rs  message.rs  rpc.rs
static/: font-nunito.css  font-taviraj.css  rocksalt-frontend.js  rocksalt-frontend.wasm  rocksalt-style.css  rocksalt_frontend.js  rocksalt_frontend.wasm
