[workspace]
members = ["shared", "frontend"]
default-members = ["."]

[package]
name = "rocksalt"
version = "0.1.0"
authors = ["mbuscemi <matthew.buscemi@gmail.com>"]
edition = "2018"

[dependencies]
rocksalt_shared = { path = "shared" }
web-view = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinyfiledialogs = "3.3.9"
