[workspace]
members = ["shared", "frontend"]
default-members = ["."]

[package]
name = "rocksalt"
version = "0.1.0"
authors = ["mbuscemi <matthew.buscemi@gmail.com>"]
edition = "2018"

[dependencies]
rocksalt_shared = { path = "shared" }
wry = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinyfiledialogs = "3.3.9"
