[package]
name = "rocksalt_frontend"
version = "0.1.0"
authors = ["mbuscemi <matthew.buscemi@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rocksalt_shared = { path = "../shared" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window", "Document", "EventTarget", "CustomEvent",
    "CustomEventInit", "Event",
] }
js-sys = "0.3"
serde = "1.0"
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
gloo = { version = "0.11", features = ["events"] }
indexmap = "2"
