[package]
name = "rocksalt_shared"
version = "0.1.0"
authors = ["mbuscemi <matthew.buscemi@gmail.com>"]
edition = "2018"

[dependencies]
yew = { version = "0.14.3", features = ["std_web"] }
stdweb = "0.4.20"
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"
ignore = "0.4.14"
chrono = "0.4.11"
